# pico_test_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  platformio.ini
docs/: FSD_CCS811_Sensor.md
docs/hardware/: bom.md  wiring_diagram.md
src/drivers/: ccs811.c  ccs811.h
test/: harness.py
test/metrics_log/: iteration_02.json  iteration_03.json
